# llm-debate-swarm

./: .env.example  .gitignore  DESIGN_DOC.md  Dockerfile  LICENSE  POSTMORTEM.md  README.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.lock.txt  trace_demo.py
.github/workflows/: ci.yml
docs/: sample_trace.json
docs/adr/: 0001-langgraph-as-primary-orchestrator.md  0002-swarm-vs-single-model.md  0003-vendor-neutral-dual-tracing.md  0004-statistical-meta-vs-llm-meta.md  0005-market-price-baseline-limitation.md  README.md
eval/: analyze.py  config.eval.yaml  config.groq-single.yaml  error_analysis.py  fetch_questions.py  metrics.py  plot_calibration.py  questions.yaml  redteam.py  redteam.yaml  run_eval.py
eval/results/: analysis.json  consensus.json  error_analysis.md
src/llm_debate_swarm/: __init__.py  cli.py  config.py  engine.py  graph.py  security.py  service.py  types.py
src/llm_debate_swarm/analysis/: __init__.py  calibration.py  multi_llm_analyzer.py  question_classifier.py  superforecaster.py
src/llm_debate_swarm/analysis/prompts/: probability_prompts.py
src/llm_debate_swarm/obs/: __init__.py  render.py  tracing.py
src/llm_debate_swarm/research/: __init__.py  document_compiler.py  research_manager.py
src/llm_debate_swarm/research/prompts/: research_prompts.py
src/llm_debate_swarm/research/sources/: tavily_search.py
src/llm_debate_swarm/swarm/: __init__.py  aggregator.py  eval_logger.py  personas.py  prompts.py  simulator.py  statistical_meta.py
src/llm_debate_swarm/tracking/: __init__.py  artifact_writer.py  db_schema.py  decision_logger.py
src/llm_debate_swarm/utils/: cost_tracker.py  error_capture.py  logger.py  retry.py
tests/: test_analyze.py  test_classifier.py  test_cli.py  test_error_analysis.py  test_eval_regression.py  test_graph.py  test_graph_run.py  test_imports.py  test_metrics.py  test_security.py  test_service.py  test_tracing.py  test_types.py
