[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-debate-swarm"
version = "0.1.0"
description = "Multi-LLM debate & arbitration engine: weighted multi-provider consensus + an N-agent debiasing debate swarm, aggregated into a calibrated probability."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Vladyslav Liaskovych" }]
keywords = ["llm", "multi-agent", "orchestration", "debate", "ensemble", "calibration", "llm-as-judge"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "tavily-python>=0.5.0",
    "click>=8.1",
    "aiosqlite>=0.20.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-mock>=3.14", "ruff>=0.8"]
otlp = ["opentelemetry-exporter-otlp-proto-http>=1.20"]   # stream spans to Langfuse / Jaeger / Tempo
graph = ["langgraph>=0.2"]   # LangGraph StateGraph orchestration surface

[project.scripts]
debate-swarm = "llm_debate_swarm.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_debate_swarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
